[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "token-governor"
version = "0.1.0"
description = "A tiny open-source gateway for metering shared LLM API usage."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Token Governor Contributors"}]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "jinja2>=3.1",
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["token_governor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
